--- a/instagram_clone/templates/newpost.html
+++ b/instagram_clone/templates/newpost.html
@@ -16,8 +16,8 @@
 
             <div class="field">
               <p class="control has-icons-left">
-              <label class="label is-medium">Chose your picture</label>
-                {{ form.picture }}
+              <label class="label is-medium">Choose your files</label>
+                {{ form.content }}
                 <span class="icon is-small is-left">
             <i class="fas fa-lock"></i>
           </span>
