--- a/instagram_clone/templates/index.html
+++ b/instagram_clone/templates/index.html
@@ -4,15 +4,87 @@
 {% load humanize %}
 
 {% block content %}
-      <div class="columns is-mobile is-centered">
+
+
+  <div style="overflow-x: scroll;" class="columns">
+
+{% for story in stories %}
+  <div style="padding-right: 9px;">
+    <a name="{{ story.id }}" class="showModal">
+    <figure class="image is-128x128">
+      <img class="is-rounded" src="{{ story.following.profile.picture.url }}">
+    </figure>
+    <div class="media-content has-text-centered">
+      <p class="title is-6">@{{ story.following.username }}</p> 
+    </div>
+    </a>
+  </div>
+{% endfor %}
+
+  </div>
+
+
+<div class="modal">
+  <div class="modal-background"></div>
+  <div class="modal-card">
+    <header class="modal-card-head">
+      <p id="storiestitle" class="modal-card-title">Stories</p>
+      <button id="closeModal" class="delete" aria-label="close"></button>
+    </header>
+        <!-- Slideshow container -->
+
+    <section class="modal-card-body">
+    <div class="slideshow-container">
+
+      <!-- Full-width images with number and caption text
+
+      <div class="mySlides fade">
+        <div class="numbertext">1 / 3</div>
+        <img src="{% static 'img/background1.jpg' %}" style="width:100%">
+        <div class="text">Caption Text</div>
+      </div> -->
+
+      <div id="jsondata"></div>
+
+
+
+      <!-- Next and previous buttons -->
+        <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+        <a class="next" onclick="plusSlides(1)">&#10095;</a>
+    </div>
+    </section>
+
+    </div>
+
+  </div>
+  <button class="modal-close is-large" aria-label="close"></button>
+</div>
+
+
+
+<br>
+  
+  <div class="columns is-mobile is-centered">
   <div class="column is-half">
 
 {% for post_item in post_items %}
   <div class="card">
   <div class="card-image">
-    <figure class="image is-4by3">
-      <a href="{{ post_item.get_absolute_url }}"><img src="{{ post_item.picture.url }}" alt="Placeholder image"></a>
+
+  {% if post_item.content.first.file.name|slice:"-3:" == 'jpg' or post_item.content.first.file.name|slice:"-3:" == 'png' %}
+    <figure class="image is-5by3">
+      <a href="{{ post_item.get_absolute_url }}">
+        <img src="{{ post_item.content.first.file.url }}" alt="Placeholder image">
+      </a>
     </figure>
+  {% else %}
+    <a href="{{ post_item.get_absolute_url }}">
+      <video width="1080" controls="controls" preload="metadata">
+        <source src="{{ post_item.content.first.file.url }}#t=0.5" type="video/mp4">        
+      </video>      
+    </a>
+  {% endif %}
+
   </div>
   <div class="card-content">
     <div class="media">
