--- a/instagram_clone/templates/post_detail.html
+++ b/instagram_clone/templates/post_detail.html
@@ -9,11 +9,37 @@
   <div class="column">
 
 
-      <div class="card">
+  <div class="card">
   <div class="card-image">
-    <figure class="image is-4by3">
-      <img src="{{ post.picture.url }}" alt="Placeholder image">
-    </figure>
+
+    <div class="slideshow-container">
+      
+    {% for cont in post.content.all %}
+      <!-- Full-width images with number and caption text -->
+      <div class="mySlides fade">
+        {% if cont.file.name|slice:"-3:" == 'jpg' or cont.file.name|slice:"-3:" == 'png' %}
+          <figure class="image is-4by3">
+            <a href="{{ cont.get_absolute_url }}">
+              <img src="{{ cont.file.url }}" alt="Placeholder image">
+            </a>
+          </figure>
+        {% else %}
+          <a href="{{ cont.get_absolute_url }}">
+            <video width="640" controls="controls" preload="metadata">
+              <source src="{{ cont.file.url }}#t=0.5" type="video/mp4">        
+            </video>      
+          </a>
+        {% endif %}
+      </div>
+    {% endfor %}
+
+      <!-- Next and previous buttons -->
+        <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+        <a class="next" onclick="plusSlides(1)">&#10095;</a>
+    </div>
+
+  
+
   </div>
   <div class="card-content">
     <div class="media">
